--- a/hugo.toml
+++ b/hugo.toml
@@ -112,3 +112,7 @@ cmd = "mailto:example@example.com"
 name = "RSS"
 icon = "fas fa-rss"
 url = "index.xml"
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
